{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 489,
  "lineage": "cb1554c6-be7c-799e-f51e-463497ae4c7a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ycochet_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0258cd97a1cf4155f",
            "arn": "arn:aws:ec2:us-west-1:268849317545:elastic-ip/eipalloc-0258cd97a1cf4155f",
            "domain": "vpc",
            "id": "eipalloc-0258cd97a1cf4155f",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-8-17-205.us-west-1.compute.amazonaws.com",
            "public_ip": "52.8.17.205",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ycochet_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:268849317545:internet-gateway/igw-0b8f608bc733a93a0",
            "id": "igw-0b8f608bc733a93a0",
            "owner_id": "268849317545",
            "tags": {
              "Name": "ycochet_internet_gateway"
            },
            "tags_all": {
              "Name": "ycochet_internet_gateway"
            },
            "vpc_id": "vpc-08c8b08bf82ab6c7a"
          },
          "dependencies": [
            "aws_vpc.ycochet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ycochet_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0258cd97a1cf4155f",
            "association_id": "eipassoc-0f3a57e0d3ca8e1d7",
            "connectivity_type": "public",
            "id": "nat-00d5805d6fb0354f5",
            "network_interface_id": "eni-09405d553f5043eba",
            "private_ip": "10.0.0.55",
            "public_ip": "52.8.17.205",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01a9043b8ea360232",
            "tags": {
              "Name": "ycochet_nat"
            },
            "tags_all": {
              "Name": "ycochet_nat"
            }
          },
          "dependencies": [
            "aws_eip.ycochet_eip",
            "aws_subnet.ycochet_pub",
            "aws_vpc.ycochet_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ycochet_priv_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:268849317545:route-table/rtb-02275fcfbd6f246ea",
            "id": "rtb-02275fcfbd6f246ea",
            "owner_id": "268849317545",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00d5805d6fb0354f5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ycochet_priv_table"
            },
            "tags_all": {
              "Name": "ycochet_priv_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c8b08bf82ab6c7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ycochet_eip",
            "aws_nat_gateway.ycochet_nat",
            "aws_subnet.ycochet_pub",
            "aws_vpc.ycochet_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ycochet_pub_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:268849317545:route-table/rtb-068bb9f527160d897",
            "id": "rtb-068bb9f527160d897",
            "owner_id": "268849317545",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8f608bc733a93a0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ycochet_pub_table"
            },
            "tags_all": {
              "Name": "ycochet_pub_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c8b08bf82ab6c7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ycochet_ig",
            "aws_vpc.ycochet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ycochet_ass_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fd4878c41e58a93",
            "route_table_id": "rtb-02275fcfbd6f246ea",
            "subnet_id": "subnet-020f2e58646c96e6a"
          },
          "dependencies": [
            "aws_eip.ycochet_eip",
            "aws_nat_gateway.ycochet_nat",
            "aws_route_table.ycochet_priv_table",
            "aws_subnet.ycochet_priv",
            "aws_subnet.ycochet_pub",
            "aws_vpc.ycochet_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05696cf1d54f20eca",
            "route_table_id": "rtb-02275fcfbd6f246ea",
            "subnet_id": "subnet-05690a4b88b076ad9"
          },
          "dependencies": [
            "aws_eip.ycochet_eip",
            "aws_nat_gateway.ycochet_nat",
            "aws_route_table.ycochet_priv_table",
            "aws_subnet.ycochet_priv",
            "aws_subnet.ycochet_pub",
            "aws_vpc.ycochet_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ycochet_ass_pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04930a8970d34d68b",
            "route_table_id": "rtb-068bb9f527160d897",
            "subnet_id": "subnet-01a9043b8ea360232"
          },
          "dependencies": [
            "aws_internet_gateway.ycochet_ig",
            "aws_route_table.ycochet_pub_table",
            "aws_subnet.ycochet_pub",
            "aws_vpc.ycochet_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069030b6b7e837d4f",
            "route_table_id": "rtb-068bb9f527160d897",
            "subnet_id": "subnet-0ff6f7ded366591e8"
          },
          "dependencies": [
            "aws_internet_gateway.ycochet_ig",
            "aws_route_table.ycochet_pub_table",
            "aws_subnet.ycochet_pub",
            "aws_vpc.ycochet_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ycochet_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:268849317545:subnet/subnet-020f2e58646c96e6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020f2e58646c96e6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "268849317545",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ycochet_subnet_private0"
            },
            "tags_all": {
              "Name": "ycochet_subnet_private0"
            },
            "vpc_id": "vpc-08c8b08bf82ab6c7a"
          },
          "dependencies": [
            "aws_vpc.ycochet_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:268849317545:subnet/subnet-05690a4b88b076ad9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05690a4b88b076ad9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "268849317545",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ycochet_subnet_private1"
            },
            "tags_all": {
              "Name": "ycochet_subnet_private1"
            },
            "vpc_id": "vpc-08c8b08bf82ab6c7a"
          },
          "dependencies": [
            "aws_vpc.ycochet_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ycochet_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:268849317545:subnet/subnet-01a9043b8ea360232",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a9043b8ea360232",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "268849317545",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ycochet_subnet_public0"
            },
            "tags_all": {
              "Name": "ycochet_subnet_public0"
            },
            "vpc_id": "vpc-08c8b08bf82ab6c7a"
          },
          "dependencies": [
            "aws_vpc.ycochet_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:268849317545:subnet/subnet-0ff6f7ded366591e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff6f7ded366591e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "268849317545",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ycochet_subnet_public1"
            },
            "tags_all": {
              "Name": "ycochet_subnet_public1"
            },
            "vpc_id": "vpc-08c8b08bf82ab6c7a"
          },
          "dependencies": [
            "aws_vpc.ycochet_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ycochet_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:268849317545:vpc/vpc-08c8b08bf82ab6c7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6f11530ff048fd6",
            "default_route_table_id": "rtb-03e94e6862ea12b85",
            "default_security_group_id": "sg-08fa8220679cfcfea",
            "dhcp_options_id": "dopt-0e31dbe136697bc8d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c8b08bf82ab6c7a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e94e6862ea12b85",
            "owner_id": "268849317545",
            "tags": {
              "Name": "ycochet_vpc"
            },
            "tags_all": {
              "Name": "ycochet_vpc"
            }
          }
        }
      ]
    }
  ]
}